[gd_scene load_steps=20 format=3 uid="uid://bpb3irbilm2vu"]

[ext_resource type="Texture2D" uid="uid://vjxjlgsxp5l8" path="res://assets/menu/icons/timer_icon.png" id="1"]
[ext_resource type="Theme" uid="uid://bomuf0lsbqw2o" path="res://assets/resources/gui/status_overlay_theme.tres" id="1_dj4ys"]
[ext_resource type="Texture2D" uid="uid://bqneoij3h7bi2" path="res://assets/menu/images/robot.png" id="3_8igl6"]
[ext_resource type="Script" path="res://scripts/gui/gameplay/StatusOverlay.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://8crpifyeinar" path="res://scenes/gui/gameplay/PlayerWinBanner.tscn" id="5_87jiy"]

[sub_resource type="StyleBoxFlat" id="11"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.609375, 0.0975952, 0.0975952, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[sub_resource type="Gradient" id="3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.90625, 0.654243, 0.431885, 1)

[sub_resource type="GradientTexture2D" id="4"]
gradient = SubResource("3")

[sub_resource type="Gradient" id="Gradient_k6rau"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="8"]
gradient = SubResource("Gradient_k6rau")

[sub_resource type="Gradient" id="9"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.200226, 0.405029, 0.949219, 1)

[sub_resource type="GradientTexture2D" id="10"]
gradient = SubResource("9")

[sub_resource type="Gradient" id="Gradient_tgao8"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="13"]
gradient = SubResource("Gradient_tgao8")

[sub_resource type="Gradient" id="14"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0852661, 0.187973, 0.496094, 1)

[sub_resource type="GradientTexture2D" id="15"]
gradient = SubResource("14")

[sub_resource type="SystemFont" id="SystemFont_bvbkv"]
font_weight = 700
font_stretch = 125

[node name="StatusOverlay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dj4ys")
script = ExtResource("5")

[node name="Header" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderBackground" type="Control" parent="Header"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Header/HeaderBackground"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 150.0
color = Color(0, 0, 0, 0.392157)

[node name="P1Info" type="Control" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterImage" type="TextureRect" parent="Header/P1Info"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 4.0
offset_right = -10.0
offset_bottom = -16.0
scale = Vector2(1.03224, 1.01357)
texture = ExtResource("3_8igl6")
expand_mode = 1
stretch_mode = 5

[node name="HealthHeader" type="HBoxContainer" parent="Header/P1Info"]
layout_mode = 0
anchor_left = 0.15
anchor_top = 0.065
anchor_right = 1.0
anchor_bottom = 0.2
offset_top = 0.0549994
alignment = 2

[node name="CharacterName" type="Label" parent="Header/P1Info/HealthHeader"]
layout_mode = 2
text = "ERR: CHARACTER_NAME"

[node name="Lives" type="HBoxContainer" parent="Header/P1Info/HealthHeader"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="HealthBackground" type="Panel" parent="Header/P1Info"]
layout_mode = 0
anchor_left = 0.15
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.5
theme_override_styles/panel = SubResource("11")

[node name="HealthBar" type="TextureProgressBar" parent="Header/P1Info"]
layout_mode = 0
anchor_left = 0.15
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.5
max_value = 10000.0
value = 10000.0
fill_mode = 1
nine_patch_stretch = true
texture_under = SubResource("2")
texture_progress = SubResource("4")

[node name="HealthOverlay" type="HBoxContainer" parent="Header/P1Info/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerName" type="Label" parent="Header/P1Info/HealthBar/HealthOverlay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "ERR: PLAYER_NAME"
vertical_alignment = 1
uppercase = true

[node name="CurrentHealth" type="Label" parent="Header/P1Info/HealthBar/HealthOverlay"]
layout_mode = 2
text = "ERR: PLAYER_HEALTH"

[node name="BurstBar" type="TextureProgressBar" parent="Header/P1Info"]
layout_mode = 0
anchor_left = 0.65
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 0.8
nine_patch_stretch = true
texture_under = SubResource("8")
texture_progress = SubResource("10")

[node name="Label" type="Label" parent="Header/P1Info/BurstBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BURST"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="Control" parent="Header"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="TimerBackground" type="NinePatchRect" parent="Header/Timer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
texture = ExtResource("1")

[node name="DisplayedTime" type="Label" parent="Header/Timer/TimerBackground"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Info" type="Control" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterImage" type="TextureRect" parent="Header/P2Info"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.84998
offset_top = 2.0
offset_right = -15.15
offset_bottom = -18.0
texture = ExtResource("3_8igl6")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="HealthHeader" type="HBoxContainer" parent="Header/P2Info"]
layout_mode = 0
anchor_top = 0.065
anchor_right = 0.85
anchor_bottom = 0.2

[node name="Lives" type="HBoxContainer" parent="Header/P2Info/HealthHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterName" type="Label" parent="Header/P2Info/HealthHeader"]
layout_mode = 2
text = "ERR: CHARACTER NAME"

[node name="HealthBackground" type="Panel" parent="Header/P2Info"]
layout_mode = 0
anchor_top = 0.25
anchor_right = 0.85
anchor_bottom = 0.5
theme_override_styles/panel = SubResource("11")

[node name="HealthBar" type="TextureProgressBar" parent="Header/P2Info"]
layout_mode = 0
anchor_top = 0.25
anchor_right = 0.85
anchor_bottom = 0.5
max_value = 10000.0
value = 10000.0
nine_patch_stretch = true
texture_under = SubResource("2")
texture_progress = SubResource("4")

[node name="HealthOverlay" type="HBoxContainer" parent="Header/P2Info/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentHealth" type="Label" parent="Header/P2Info/HealthBar/HealthOverlay"]
layout_mode = 2
text = "ERR: PLAYER_HEALTH"

[node name="PlayerName" type="Label" parent="Header/P2Info/HealthBar/HealthOverlay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "ERR: PLAYER_NAME"
horizontal_alignment = 2
vertical_alignment = 1
uppercase = true

[node name="BurstBar" type="TextureProgressBar" parent="Header/P2Info"]
layout_mode = 0
anchor_top = 0.55
anchor_right = 0.35
anchor_bottom = 0.8
fill_mode = 1
nine_patch_stretch = true
texture_under = SubResource("8")
texture_progress = SubResource("10")

[node name="Label" type="Label" parent="Header/P2Info/BurstBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "BURST"
vertical_alignment = 1

[node name="CenterPane" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerWinBanner" parent="CenterPane" instance=ExtResource("5_87jiy")]
visible = false
layout_mode = 1

[node name="Footer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control" type="Control" parent="Footer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Footer/Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 160.0
color = Color(0, 0, 0, 0.392157)

[node name="P1Meter" type="Control" parent="Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MeterBar" type="TextureProgressBar" parent="Footer/P1Meter"]
layout_mode = 0
anchor_left = 0.245
anchor_top = 0.35
anchor_right = 0.7
anchor_bottom = 0.65
offset_top = 2.67029e-05
offset_bottom = 2.28882e-05
max_value = 10000.0
step = 10.0
nine_patch_stretch = true
texture_under = SubResource("13")
texture_progress = SubResource("15")

[node name="MeterValue" type="TextureRect" parent="Footer/P1Meter"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.15
anchor_bottom = 0.2
texture = ExtResource("1")
expand_mode = 1

[node name="MeterLabel" type="Label" parent="Footer/P1Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.202
anchor_top = 0.5
anchor_right = 0.203
anchor_bottom = 0.5
offset_left = -50.516
offset_top = -52.0
offset_right = 49.526
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0.0745098, 0.415686, 1)
theme_override_fonts/font = SubResource("SystemFont_bvbkv")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Meter" type="Control" parent="Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MeterBar" type="TextureProgressBar" parent="Footer/P2Meter"]
layout_mode = 0
anchor_left = 0.3
anchor_top = 0.35
anchor_right = 0.755
anchor_bottom = 0.65
offset_top = 2.67029e-05
offset_bottom = 2.28882e-05
max_value = 10000.0
step = 10.0
fill_mode = 1
nine_patch_stretch = true
texture_under = SubResource("13")
texture_progress = SubResource("15")

[node name="MeterValue" type="TextureRect" parent="Footer/P2Meter"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
anchor_left = 0.85
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.2
grow_horizontal = 0
texture = ExtResource("1")
expand_mode = 1

[node name="MeterLabel" type="Label" parent="Footer/P2Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.202
anchor_top = 0.5
anchor_right = 0.203
anchor_bottom = 0.5
offset_left = 520.484
offset_top = -52.0
offset_right = 620.526
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0.0745098, 0.415686, 1)
theme_override_fonts/font = SubResource("SystemFont_bvbkv")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
